# glad

./: CMakeLists.txt  README.md  gladuninstall.cmake
include/glad/: glad.h
src/: glad.c
